--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
         <h1>this is heading</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta cum magnam officiis numquam id tempore ipsa. Odio laborum non iure.</p>
+
+        <h2>This is subheading</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, doloremque.</p>
 </body>
 </html>
